# shipsecure

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  Dockerfile  README.md  SECURITY.md  TODOS.md  docker-compose.prod.yml  docker-compose.yml  shipsecure-attestation-prd.md  test-e2e-phase2.sh  test-e2e.sh  vibe_code_security_auditor_prd.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-push.yml  ci.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json  contrast-checker.js  v1.8-MILESTONE-AUDIT.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md  v1.1-REQUIREMENTS.md  v1.2-REQUIREMENTS.md  v1.2-ROADMAP.md  v1.3-REQUIREMENTS.md  v1.4-REQUIREMENTS.md  v1.4-ROADMAP.md  v1.5-REQUIREMENTS.md  v1.5-ROADMAP.md  v1.6-REQUIREMENTS.md  v1.7-REQUIREMENTS.md  v1.7-ROADMAP.md  v1.8-REQUIREMENTS.md  v1.8-ROADMAP.md  v1.9-REQUIREMENTS.md
.planning/research/: ARCHITECTURE.md  FEATURES-deployment.md  FEATURES-frontend-testing.md  FEATURES-launch-readiness.md  FEATURES.md  PITFALLS-launch-readiness.md  PITFALLS-observability.md  PITFALLS-testing.md  PITFALLS.md  STACK-LAUNCH-READINESS.md  STACK-TESTING.md  STACK.md  SUMMARY-testing.md  SUMMARY.md
deploy/: setup-production.sh  shipsecure.service
docs/designs/: customer-acquisition-v1.md
frontend/: .env.example  .env.test  .gitignore  Dockerfile  next.config.ts  package-lock.json  package.json  playwright.config.ts  proxy.ts  vitest.config.ts  vitest.setup.ts
frontend/app/: error.tsx  global-error.tsx  globals.css  layout.tsx  loading.tsx  opengraph-image.tsx  page.tsx  robots.ts  sitemap.ts
frontend/components/: active-scans-poller.tsx  auth-gate.tsx  domain-badge.tsx  finding-accordion.tsx  footer.tsx  grade-summary.tsx  header.tsx  logo.tsx  meta-tag-snippet.tsx  page-container.tsx  progress-checklist.tsx  results-dashboard.tsx  scan-form.tsx  scan-history-table.tsx  share-button.tsx  signup-tracker.tsx  supply-chain-findings.tsx  supply-chain-form.tsx  supply-chain-summary.tsx  upgrade-cta.tsx
frontend/e2e/: error-flows.spec.ts  free-scan.spec.ts  paid-audit.spec.ts  supply-chain.spec.ts
frontend/lib/: api.ts  platforms.ts  supply-chain-types.ts  types.ts
frontend/scripts/: generate-favicons.mjs
infrastructure/: .gitignore  ansible.cfg  requirements.yml
migrations/: 20260204000001_create_scans.sql  20260204_002_create_findings.sql  20260204_003_add_ip_to_scans.sql  20260205000001_add_results_token_and_stages.sql  20260205100001_add_detection_and_vibecode.sql  20260206000001_add_paid_audits.sql  20260216000001_add_request_id_to_scans.sql  20260217000001_create_users.sql  20260218000001_stripe_removal_schema.sql  20260218000002_create_verified_domains.sql  20260331000001_add_expired_status.sql  20260407000001_add_supply_chain_columns.sql
src/: cleanup.rs  lib.rs  main.rs  pdf.rs
(+490 files in other folders)
