[package]
name = "trustedge_audit"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
base64 = "0.22"
chrono = { version = "0.4.43", features = ["serde"] }
dotenvy = "0.15.7"
futures = "0.3"
lazy_static = "1.4"
rand = "0.8"
regex = "1"
reqwest = { version = "0.13.1", features = ["json"] }
scraper = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-rustls", "postgres", "migrate", "uuid", "chrono"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6.8", features = ["trace", "timeout", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
http-body-util = "0.1"
